src/main/kotlin/tilings/language/grammar/EscherParser.java
package tilings.language.grammar;

// Generated from Escher.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EscherParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, GRAPH=12, CHILD=13, SUBDIVISION=14, TILETYPE=15, VERTEX=16, 
		EDGE=17, TILE=18, SPLIT=19, CONNECT=20, END=21, WHITESPACE=22, NUMBER=23, 
		ID=24;
	public static final int
		RULE_file = 0, RULE_mainline = 1, RULE_subline = 2, RULE_phrase = 3, RULE_definition = 4, 
		RULE_tileDefinition = 5, RULE_subdivisionDefinition = 6, RULE_expression = 7, 
		RULE_function = 8, RULE_tileFunction = 9, RULE_splitFunction = 10, RULE_connectFunction = 11, 
		RULE_assignment = 12, RULE_vertexAssignment = 13, RULE_edgeAssignment = 14, 
		RULE_childAssignment = 15, RULE_graphAssignment = 16, RULE_graphDeclaration = 17, 
		RULE_childList = 18, RULE_node = 19, RULE_face = 20;
	public static final String[] ruleNames = {
		"file", "mainline", "subline", "phrase", "definition", "tileDefinition", 
		"subdivisionDefinition", "expression", "function", "tileFunction", "splitFunction", 
		"connectFunction", "assignment", "vertexAssignment", "edgeAssignment", 
		"childAssignment", "graphAssignment", "graphDeclaration", "childList", 
		"node", "face"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "','", "'}'", "'('", "')'", "'='", "'['", "']'", "'.'", "'vertex'", 
		"'face'", "'GRAPH'", "'CHILD'", "'SUBDIVISION'", "'TILETYPE'", "'VERTEX'", 
		"'EDGE'", "'tile'", "'split'", "'connect'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"GRAPH", "CHILD", "SUBDIVISION", "TILETYPE", "VERTEX", "EDGE", "TILE", 
		"SPLIT", "CONNECT", "END", "WHITESPACE", "NUMBER", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Escher.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EscherParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<MainlineContext> mainline() {
			return getRuleContexts(MainlineContext.class);
		}
		public MainlineContext mainline(int i) {
			return getRuleContext(MainlineContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				mainline();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHILD) | (1L << SUBDIVISION) | (1L << TILETYPE) | (1L << VERTEX) | (1L << EDGE) | (1L << TILE) | (1L << SPLIT) | (1L << CONNECT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainlineContext extends ParserRuleContext {
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public TerminalNode END() { return getToken(EscherParser.END, 0); }
		public MainlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterMainline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitMainline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitMainline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainlineContext mainline() throws RecognitionException {
		MainlineContext _localctx = new MainlineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			phrase();
			setState(48);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SublineContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode END() { return getToken(EscherParser.END, 0); }
		public SublineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterSubline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitSubline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitSubline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SublineContext subline() throws RecognitionException {
		SublineContext _localctx = new SublineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			expression();
			setState(51);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhraseContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phrase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterPhrase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitPhrase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhraseContext phrase() throws RecognitionException {
		PhraseContext _localctx = new PhraseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_phrase);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUBDIVISION:
			case TILETYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				definition();
				}
				break;
			case CHILD:
			case VERTEX:
			case EDGE:
			case TILE:
			case SPLIT:
			case CONNECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TileDefinitionContext tileDefinition() {
			return getRuleContext(TileDefinitionContext.class,0);
		}
		public SubdivisionDefinitionContext subdivisionDefinition() {
			return getRuleContext(SubdivisionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definition);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TILETYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				tileDefinition();
				}
				break;
			case SUBDIVISION:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				subdivisionDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TileDefinitionContext extends ParserRuleContext {
		public TerminalNode TILETYPE() { return getToken(EscherParser.TILETYPE, 0); }
		public TerminalNode ID() { return getToken(EscherParser.ID, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(EscherParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(EscherParser.NUMBER, i);
		}
		public TileDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tileDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterTileDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitTileDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitTileDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TileDefinitionContext tileDefinition() throws RecognitionException {
		TileDefinitionContext _localctx = new TileDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tileDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(TILETYPE);
			setState(62);
			match(ID);
			setState(63);
			match(T__0);
			setState(64);
			match(NUMBER);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(65);
				match(T__1);
				setState(66);
				match(NUMBER);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubdivisionDefinitionContext extends ParserRuleContext {
		public TerminalNode SUBDIVISION() { return getToken(EscherParser.SUBDIVISION, 0); }
		public TerminalNode ID() { return getToken(EscherParser.ID, 0); }
		public List<SublineContext> subline() {
			return getRuleContexts(SublineContext.class);
		}
		public SublineContext subline(int i) {
			return getRuleContext(SublineContext.class,i);
		}
		public SubdivisionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subdivisionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterSubdivisionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitSubdivisionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitSubdivisionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubdivisionDefinitionContext subdivisionDefinition() throws RecognitionException {
		SubdivisionDefinitionContext _localctx = new SubdivisionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subdivisionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(SUBDIVISION);
			setState(75);
			match(ID);
			setState(76);
			match(T__0);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				subline();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHILD) | (1L << VERTEX) | (1L << EDGE) | (1L << TILE) | (1L << SPLIT) | (1L << CONNECT))) != 0) );
			setState(82);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TILE:
			case SPLIT:
			case CONNECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				function();
				}
				break;
			case CHILD:
			case VERTEX:
			case EDGE:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TileFunctionContext tileFunction() {
			return getRuleContext(TileFunctionContext.class,0);
		}
		public SplitFunctionContext splitFunction() {
			return getRuleContext(SplitFunctionContext.class,0);
		}
		public ConnectFunctionContext connectFunction() {
			return getRuleContext(ConnectFunctionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_function);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				tileFunction();
				}
				break;
			case SPLIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				splitFunction();
				}
				break;
			case CONNECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				connectFunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TileFunctionContext extends ParserRuleContext {
		public TerminalNode TILE() { return getToken(EscherParser.TILE, 0); }
		public TerminalNode ID() { return getToken(EscherParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(EscherParser.NUMBER, 0); }
		public TileFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tileFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterTileFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitTileFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitTileFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TileFunctionContext tileFunction() throws RecognitionException {
		TileFunctionContext _localctx = new TileFunctionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tileFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(TILE);
			setState(94);
			match(T__3);
			setState(95);
			match(ID);
			setState(96);
			match(T__1);
			setState(97);
			match(NUMBER);
			setState(98);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitFunctionContext extends ParserRuleContext {
		public TerminalNode SPLIT() { return getToken(EscherParser.SPLIT, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(EscherParser.NUMBER, 0); }
		public SplitFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterSplitFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitSplitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitSplitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SplitFunctionContext splitFunction() throws RecognitionException {
		SplitFunctionContext _localctx = new SplitFunctionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_splitFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SPLIT);
			setState(101);
			match(T__3);
			setState(102);
			node();
			setState(103);
			match(T__1);
			setState(104);
			node();
			setState(105);
			match(T__1);
			setState(106);
			match(NUMBER);
			setState(107);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectFunctionContext extends ParserRuleContext {
		public TerminalNode CONNECT() { return getToken(EscherParser.CONNECT, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public ConnectFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterConnectFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitConnectFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitConnectFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConnectFunctionContext connectFunction() throws RecognitionException {
		ConnectFunctionContext _localctx = new ConnectFunctionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_connectFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(CONNECT);
			setState(110);
			match(T__3);
			setState(111);
			node();
			setState(112);
			match(T__1);
			setState(113);
			node();
			setState(114);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VertexAssignmentContext vertexAssignment() {
			return getRuleContext(VertexAssignmentContext.class,0);
		}
		public EdgeAssignmentContext edgeAssignment() {
			return getRuleContext(EdgeAssignmentContext.class,0);
		}
		public ChildAssignmentContext childAssignment() {
			return getRuleContext(ChildAssignmentContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assignment);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VERTEX:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				vertexAssignment();
				}
				break;
			case EDGE:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				edgeAssignment();
				}
				break;
			case CHILD:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				childAssignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VertexAssignmentContext extends ParserRuleContext {
		public TerminalNode VERTEX() { return getToken(EscherParser.VERTEX, 0); }
		public List<TerminalNode> ID() { return getTokens(EscherParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(EscherParser.ID, i);
		}
		public SplitFunctionContext splitFunction() {
			return getRuleContext(SplitFunctionContext.class,0);
		}
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public VertexAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vertexAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterVertexAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitVertexAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitVertexAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VertexAssignmentContext vertexAssignment() throws RecognitionException {
		VertexAssignmentContext _localctx = new VertexAssignmentContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_vertexAssignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(VERTEX);
			setState(122);
			match(ID);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(123);
				match(T__1);
				setState(124);
				match(ID);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(130);
				match(T__5);
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SPLIT:
					{
					setState(131);
					splitFunction();
					}
					break;
				case ID:
					{
					setState(132);
					node();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeAssignmentContext extends ParserRuleContext {
		public TerminalNode EDGE() { return getToken(EscherParser.EDGE, 0); }
		public TerminalNode ID() { return getToken(EscherParser.ID, 0); }
		public ConnectFunctionContext connectFunction() {
			return getRuleContext(ConnectFunctionContext.class,0);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public EdgeAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).enterEdgeAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EscherListener ) ((EscherListener)listener).exitEdgeAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EscherVisitor ) return ((EscherVisitor<? extends T>)visitor).visitEdgeAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
